--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,29 @@
 {
-  "name": "ChatGPT for Google",
-  "description": "Display ChatGPT response in Google Search results",
+  "name": "ChatGPT for Firefox",
+  "description": "Display ChatGPT response in Firefox Search results",
   "version": "1.0.0",
-  "manifest_version": 3,
+  "manifest_version": 2,
   "icons": {
     "16": "logo.png",
     "32": "logo.png",
     "48": "logo.png",
     "128": "logo.png"
   },
-  "host_permissions": ["https://*.openai.com/"],
+  "permissions": ["https://*.openai.com/", "activeTab"],
   "background": {
-    "service_worker": "background.js"
+    "scripts": ["background.js"]
   },
   "content_scripts": [
     {
-      "matches": ["https://*/search*"],
-      "include_globs": ["*.google.*/*"],
+      "matches": ["https://*.google.com/search*"],
+      "run_at": "document_end",
       "js": ["content-script.js"],
       "css": ["styles.css"]
     }
-  ]
+  ],
+  "applications": {
+    "gecko": {
+      "id": "chatgpt@example.com"
+    }
+  }
 }
